Chroot jails for virtual server domain owners can now be setup at domain creation time or afterwards. This limits the files visible to SSH sessions and PHP apps run via FPM to the jail directory.
SSL certificates can now be copied to Dovecot even for virtual servers that don't have their own private IP address.
SSL certificates that are expired or close to it are displayed on the System Information page.
---- Changes since 5.99 ----
Removed support for Qmail+LDAP as a mail server.
Unexpected server processes running as domain users are now detected and included in the validation report, and can optionally be automatically terminated.
Added support for using clamdscan for remote virus scanning, so that clamd-stream-client doesn't need to be installed.
---- Changes since 6.00 ----
Multiple remote MySQL servers can now be defined, and selected on a per-domain basis at virtual server creation time. This allows some or all domains to easily use different MySQL hosts.
Support for rating scripts and viewing existing ratings has been removed, as this was a confusing and rarely-used feature.
Installable scripts can now be in multiple categories, and the UI has been updated to reflect this.
---- Changes since 6.01 ----
PHP scripts run in FPM mode are now compatible with .htaccess files.
The Wordpress script installer use wp-cli if available for installation and upgrades.
Any virtual servers can now share a DNS zone file, unlike in previous Virtualmin releases where only a top-level server could be a DNS domain parent. This removes the need to create additional NS records in the parent domain in most cases.
---- Changes since 6.02 ----
When adding an alias to a domain with a Let's Encrypt SSL certificate, the cert is automatically updated to include the alias domain.
Backups from cPanel, Plesk and other control panels can now be migrated even when Nginx is used as a webserver.
---- Changes since 6.03 ----
Removed support for PHP 4.