@@ -15,6 +15,7 @@ if ($in{'delete'}) {
 	@d = split(/\0/, $in{'d'});
 	@d || &error($text{'records_enone'});
 	&obtain_lock_dns($d);
+	&pre_records_change($d);
 	($recs, $file) = &get_domain_dns_records_and_file($d);
 	$file || &error($recs);
 	foreach $r (reverse(@$recs)) {
